force-app/main/default/objects/Muestras_Entregadas__c/Muestras_Entregadas__c.object-meta.xml
<CustomObject>
    <label>Muestras Entregadas</label>
    <nameField>
        <displayFormat>MM-{0000}</displayFormat>
        <label>Muestras Entregadas Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Muestras Entregadas</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>