force-app/main/default/objects/Muestras_Entregadas__c/fields/Interaccion__c.field-meta.xml
<CustomField>
    <fullName>Interaccion__c</fullName>
    <label>Interacción</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Dan360_Interacciones__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Visita Médica</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Dan360_Interacciones__c</referenceTo>
    <relationshipLabel>Muestras Entregadas</relationshipLabel>
    <relationshipName>Muestras_Entregadas</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>