force-app/main/default/objects/Muestras_Entregadas__c/fields/Muestra_Medica__c.field-meta.xml
<CustomField>
    <fullName>Muestra_Medica__c</fullName>
    <formula>Stock_x_MM__r.Muestra_Medica__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Muestra Medica</label>
    <type>Text</type>
</CustomField>