force-app/main/default/objects/Muestras_Entregadas__c/fields/Stock_x_MM__c.field-meta.xml
<CustomField>
    <fullName>Stock_x_MM__c</fullName>
    <label>Stock x MM</label>
    <referenceTo>Stock_x_MM__c</referenceTo>
    <relationshipLabel>Muestras Entregadas</relationshipLabel>
    <relationshipName>Muestras_Entregadas</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>